# NadaDotAI

./: README.md  pyproject.toml
data/processed/: notes.pkl
models/: note_mappings.pkl
notebooks/: nadadotai_runner.ipynb  rnn_char_level.ipynb
outputs/: generated_output.mid
src/: config.py  generate.py  midi_utils.py  model.py  preprocess.py  test_generate.py  test_generate_midi.py  test_preprocess.py  train.py
